src/styles/molecules/_molecules.card.scss
@use '../quarks' as *;

/**
 * CARD VARIABLES
 * -------------------------------------------------------------------
 */

.m-card {
  --card-bg-color: var(--BG-COLOR-LIGHT);
  --card-border-color: var(--BORDER-COLOR);
  --card-gap: var(--SPACER);
  --card-text-color: var(--TEXT-COLOR);
}

/**
 * CARD
 * -------------------------------------------------------------------
 */

.m-card {
  background-color: var(--card-bg-color);
  border: var(--BORDER-WIDTH) solid var(--card-border-color);
  color: var(--card-text-color);
  gap: var(--card-gap);
  grid-template-areas:
    "image"
    "body";
  grid-template-columns: 1fr;

  &:has(.m-card__image) {
    display: grid;
  }
}

/**
 * CARD ELEMENTS
 * -------------------------------------------------------------------
 */

.m-card {
  &__image {
    align-self: stretch;
    grid-area: image;

    img {
      display: block;
      height: 100%;
      object-fit: cover;
      width: 100%;
    }

    + .m-card__body {
      padding-top: 0;
    }
  }

  &__body {
    grid-area: body;
    padding: var(--card-gap);
  }
}


/**
 * CARD MODIFIERS
 * -------------------------------------------------------------------
 */

.m-card--light-border {
  --card-border-color: var(--BORDER-COLOR-LIGHT);
}

.m-card--no-border {
  border: none;
}

.m-card--highlight {
  @extend .m-card--no-border;

  --card-bg-color: var(--BRAND-1);
  --card-text-color: var(--BRAND-1-CONTRAST);

  a:not(.a-button),
  small,
  .small {
    color: inherit;
  }
}

/**
 * CARD CONTAINER QUERIES
 * -------------------------------------------------------------------
 */

.m-card__container {
  container-type: inline-size;
}

@container (min-width: #{$container-sm}) {
  .m-card--image-left {
    grid-template-areas: "image body";
    grid-template-columns: 1fr 1fr;

    .m-card__body {
      padding: var(--card-gap);
    }

    &:has(.m-card__image) .m-card__body {
      padding-left: 0;
    }
  }

  .m-card--image-right {
    grid-template-areas: "body image";
    grid-template-columns: 1fr 1fr;

    .m-card__body {
      padding: var(--card-gap);
    }

    &:has(.m-card__image) .m-card__body {
      padding-right: 0;
    }
  }

  .m-card--extra-padding {
    &.m-card--image-left,
    &.m-card--image-right {
      .m-card__body {
        padding: var(--card-gap);
      }
    }
  }
}

@container (min-width: #{$container-md}) {
  .m-card--image-left {
    &.m-card--small-image {
      grid-template-columns: 1fr 2fr;
    }

    &.m-card--big-image {
      grid-template-columns: 2fr 1fr;
    }
  }

  .m-card--image-right {
    &.m-card--small-image {
      grid-template-columns: 2fr 1fr;
    }

    &.m-card--big-image {
      grid-template-columns: 1fr 2fr;
    }
  }
}

